Stopped toolbar from wrapping floated divs on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -209,6 +209,12 @@ li a {
   margin:5px;
 }
 
+.noWrap {
+  white-space: nowrap;
+  min-width: 800px;
+  overflow: auto;
+}
+
 .overflow {
   height: 700px;
   overflow-y: scroll;
@@ -335,6 +341,8 @@ li a {
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   margin-bottom: 100px;
+  white-space: nowrap;
+  min-width: 800px;
 }
 
 .username {
